# exgrid

./: Cargo.toml  README.md
src/: automata.rs  chunk.rs  grid.rs  lib.rs  macros.rs  misc.rs  nested_array.rs  vector.rs
src/chunk/: iter.rs  iter_par.rs  nested_array.rs
src/dim2/: automata.rs  chunk.rs  grid.rs  mod.rs
src/dim2/chunk/: iter.rs  iter_par.rs
src/dim2/grid/: iter.rs
src/dim3/: chunk.rs  grid.rs  mod.rs
src/dim3/chunk/: iter.rs
src/dim3/grid/: iter.rs
src/grid/: iter.rs
tests/: main.rs  main_3d.rs
