[package]
name = "exgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { version = "1.5.3", optional = true }
vek = { version = "0.15.9", features = ["std"], default-features = false }

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
automata = []
multi-thread = ["dep:rayon"]
