[package]
name = "exgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
serde = { version = "1.0", optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[dev-dependencies]
ciborium = "0.2.1"
rand = "0.8.5"

[features]
default = []
automata = []
multi-thread = ["dep:rayon"]
serde = ["dep:serde", "dep:serde-big-array"]
